Fixed ul element alignment

--- a/style.css
+++ b/style.css
@@ -16,17 +16,13 @@ body {
   background-color: var(--very-dark-blue);
 }
 
-/* h1 {
-  margin-top: 10px;
-} */
-
 p {
   font-size: 15px;
   line-height: 1.6;
   color: var(--white);
   padding: 20px;
   margin-bottom: 20px;
-  font-family: "Lexend Deca", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 ul {
@@ -34,7 +30,6 @@ ul {
   flex-direction: column;
   justify-content: space-between;
   color: var(--white);
-  padding-left: 20px;
   list-style-type: none;
   font-family: "Lexend Deca", sans-serif;
   font-size: 1.5em;
@@ -69,6 +64,7 @@ ul li span {
   background: url(./images/image-header-mobile.jpg), var(--soft-violet);
   background-repeat: no-repeat;
   background-size: cover;
+  margin-bottom: 20px;
   background-blend-mode: multiply;
   width: 100%;
   height: 40vh;
@@ -78,8 +74,9 @@ ul li span {
 .card-text {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  margin-left: 5px;
 }
 
 .attribution {
@@ -97,10 +94,7 @@ ul li span {
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
-    align-items: left;
     margin: 120px 120px 120px 120px;
-    /* margin-right: 100px;
-    padding-left: 0px; */
     border-radius: 10px 0px 0px 10px;
   }
 
@@ -108,6 +102,7 @@ ul li span {
     background: url(./images/image-header-desktop.jpg), var(--soft-violet);
     background-repeat: no-repeat;
     background-size: cover;
+    width: 120%;
     height: 525px;
     padding-bottom: 0px;
     margin-bottom: 0px;
@@ -118,13 +113,13 @@ ul li span {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
     width: 100%;
     color: var(--white);
-    padding-left: 20px;
     list-style-type: none;
     font-family: "Lexend Deca", sans-serif;
-    font-size: 1.5em;
     font-weight: 700;
+    text-align: left;
   }
 
   ul li span {
@@ -135,6 +130,7 @@ ul li span {
     font-size: 15px;
     font-weight: 400;
     margin-top: 10px;
+    margin-right: 20px;
   }
 
   h1 {
@@ -142,11 +138,10 @@ ul li span {
   }
 
   p {
-    /* margin-bottom: 20px; */
     margin-left: 0px;
     padding-left: 0px;
     text-align: left;
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Inter", sans-serif;
   }
 
   .card-text {
@@ -155,8 +150,8 @@ ul li span {
     justify-content: space-around;
     align-items: left;
     margin-top: 0px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 80px;
+    margin-right: 120px;
     word-wrap: break-word;
   }
 
